--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test:dev": "meteor test --driver-package dispatch:mocha-phantomjs"
   },
   "dependencies": {
-    "@types/meteor": "^1.4.5",
     "JSONStream": "^1.3.1",
     "aws-sdk": "^2.103.0",
     "babel-runtime": "^6.20.0",
@@ -19,6 +18,7 @@
     "fast-csv": "^2.4.0",
     "fibers": "^2.0.0",
     "gettext-parser": "^1.3.0",
+    "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "meteor-node-stubs": "~0.2.4",
@@ -28,6 +28,7 @@
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.10",
     "react-dom": "^15.6.1",
+    "react-map-gl-heatmap-overlay": "^1.1.3",
     "react-router": "^3.0.5",
     "s3-upload-stream": "^1.0.7",
     "simpl-schema": "^0.3.2",
@@ -40,7 +41,7 @@
     "uniforms-bootstrap3": "^1.20.0"
   },
   "devDependencies": {
-    "@types/meteor": "^1.3.32",
+    "@types/meteor": "^1.4.5",
     "@types/node": "^7.0.5",
     "@types/react": "^15.0.14",
     "@types/react-dom": "^0.14.23",
