--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.10",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.6.1",
+    "react-map-gl": "^3.0.4",
     "react-map-gl-heatmap-overlay": "^1.1.3",
     "react-router": "^3.0.5",
     "s3-upload-stream": "^1.0.7",
