--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^0.30.10",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.6.1",
+    "react-geolocated": "^2.0.0",
     "react-map-gl": "^3.0.4",
     "react-map-gl-heatmap-overlay": "^1.1.3",
     "react-router": "^3.0.5",
