--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/lodash": "^4.14.83",
     "autoprefixer": "7.1.2",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
@@ -10,11 +11,14 @@
     "firebase": "^4.6.1",
     "fs-extra": "3.0.1",
     "jest": "20.0.4",
+    "lodash": "^4.17.4",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-firebase": "^2.2.7-4",
+    "react-firebaseui": "^1.0.5",
+    "simpl-schema": "^0.4.1",
     "style-loader": "0.18.2",
     "styled-components": "^2.2.3",
     "url-loader": "0.5.9",
