--- a/package.json
+++ b/package.json
@@ -3,27 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/lodash": "^4.14.83",
-    "autoprefixer": "7.1.2",
-    "css-loader": "0.28.4",
-    "dotenv": "4.0.0",
-    "file-loader": "0.11.2",
     "firebase": "^4.6.1",
-    "fs-extra": "3.0.1",
-    "jest": "20.0.4",
     "lodash": "^4.17.4",
+    "material-design-icons": "^3.0.1",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-firebase": "^2.2.7-4",
     "react-firebaseui": "^1.0.5",
+    "react-md": "^1.2.8",
     "simpl-schema": "^0.4.1",
-    "style-loader": "0.18.2",
     "styled-components": "^2.2.3",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
@@ -34,19 +25,28 @@
   },
   "devDependencies": {
     "@types/jest": "^21.1.5",
+    "@types/lodash": "^4.14.83",
     "@types/node": "^8.0.50",
     "@types/react": "^16.0.21",
     "@types/react-dom": "^16.0.2",
+    "@types/webfontloader": "^1.6.29",
+    "autoprefixer": "7.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "css-loader": "0.28.4",
+    "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
     "node-sass": "^4.6.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "react-dev-utils": "^4.0.1",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
+    "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "^20.0.7",
     "ts-loader": "^2.3.7",
@@ -54,7 +54,11 @@
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
     "typescript": "~2.5.3",
-    "webpack-dev-server": "2.7.1"
+    "url-loader": "0.5.9",
+    "webfontloader": "^1.6.28",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "2.7.1",
+    "webpack-manifest-plugin": "1.2.1"
   },
   "jest": {
     "mapCoverage": true,
