--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "price-map",
   "private": true,
   "scripts": {
-    "start": "meteor run",
-    "test": "meteor test --once --driver-package dispatch:mocha-phantomjs",
-    "test:dev": "meteor test --driver-package dispatch:mocha-phantomjs"
+    "extract": "BABEL_DISABLE_CACHE=1 BABEL_ENV=extract babel counter.ts"
   },
   "dependencies": {
     "JSONStream": "^1.3.1",
@@ -13,6 +11,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "bootstrap-sass": "^3.3.7",
+    "c-3po": "^0.5.8",
     "connect-multiparty": "^2.0.0",
     "csvstream": "^1.1.0",
     "fast-csv": "^2.4.0",
@@ -49,9 +48,13 @@
     "@types/react": "^15.0.14",
     "@types/react-dom": "^0.14.23",
     "@types/react-router": "^3.0.6",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-c-3po": "^0.5.8",
+    "babel-plugin-transform-typescript": "^7.0.0-alpha.19",
+    "babel-preset-typescript": "^7.0.0-alpha.19",
     "enzyme": "^2.7.1",
     "tslint": "^4.5.1",
     "tslint-react": "^2.4.0",
-    "typescript": "^2.2.1"
+    "typescript": "^2.5.2"
   }
 }
